--- a/composer.json
+++ b/composer.json
@@ -10,20 +10,20 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.0",
-        "laravel/tinker": "^2.10.1",
-        "livewire/flux": "^2.1.1",
-        "livewire/volt": "^1.7.0"
+        "laravel/framework": "^12.41.1",
+        "laravel/tinker": "^2.10.2",
+        "livewire/volt": "^1.10.1",
+        "robsontenorio/mary": "^2.4"
     },
     "require-dev": {
-        "fakerphp/faker": "^1.23",
-        "laravel/pail": "^1.2.2",
-        "laravel/pint": "^1.18",
-        "laravel/sail": "^1.41",
+        "fakerphp/faker": "^1.24.1",
+        "laravel/pail": "^1.2.4",
+        "laravel/pint": "^1.26.0",
+        "laravel/sail": "^1.49.0",
         "mockery/mockery": "^1.6",
         "nunomaduro/collision": "^8.6",
-        "pestphp/pest": "^4.1",
-        "pestphp/pest-plugin-laravel": "^4.0"
+        "pestphp/pest": "^4.1.6",
+        "pestphp/pest-plugin-laravel": "^4.0.0"
     },
     "autoload": {
         "psr-4": {
