--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,12 @@
-APP_NAME=Laravel
+APP_NAME=Belimbing
+# local — Development on your machine
+# staging — Pre-production testing
+# production — Live application
+# testing — Automated tests (often set in phpunit.xml)
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=https://local.blb.lara
 
 APP_LOCALE=en
 APP_FALLBACK_LOCALE=en
@@ -20,12 +24,12 @@ LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION=sqlite
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
-# DB_DATABASE=laravel
-# DB_USERNAME=root
-# DB_PASSWORD=
+DB_CONNECTION=pgsql
+DB_HOST=127.0.0.1
+DB_PORT=5432
+DB_DATABASE=blb
+DB_USERNAME=postgres
+DB_PASSWORD=test123
 
 SESSION_DRIVER=database
 SESSION_LIFETIME=120
