feat: enhance Docker setup and add database connection recovery middleware
- Introduced a new `DatabaseConnectionRecovery` middleware to handle database connection errors gracefully, attempting reconnection and retrying requests.
- Updated Docker Compose configuration to streamline service management and ensure proper health checks for PostgreSQL and Redis.
- Enhanced Caddyfile configuration for improved asset handling and reverse proxy settings.
- Added SSL certificate trust setup for local development to facilitate secure connections.
- Updated installation documentation to reflect changes in setup scripts and Docker usage.

--- a/Caddyfile
+++ b/Caddyfile
@@ -11,22 +11,33 @@
 	}
 
 	# Vite / Frontend Config (dev mode paths + production builds)
-	@vite_assets path /build/* /assets/* /resources/* /@vite/* /@fs/* /node_modules/*
-	handle @vite_assets {
-		reverse_proxy 127.0.0.1:{$VITE_PORT} {
+	# Try Vite first for dev assets, fallback to Laravel for built assets
+	@vite_dev path /@vite/* /@fs/* /node_modules/*
+	handle @vite_dev {
+		reverse_proxy {$VITE_HOST:127.0.0.1}:{$VITE_PORT} {
 			header_up Host {host}
+		}
+	}
+
+	# Built assets (CSS/JS from public/build) - serve from Laravel
+	@built_assets path /build/* /assets/*
+	handle @built_assets {
+		reverse_proxy {$APP_HOST:127.0.0.1}:{$APP_PORT} {
+			header_up Host {host}
+			header_up X-Forwarded-Proto {scheme}
+			header_up X-Forwarded-Host {host}
+			header_up X-Forwarded-Port {$HTTPS_PORT:443}
 		}
 	}
 
 	# Laravel Backend
 	handle {
-		reverse_proxy 127.0.0.1:{$APP_PORT} {
+		reverse_proxy {$APP_HOST:127.0.0.1}:{$APP_PORT} {
 			header_up Host {host}
 			header_up X-Forwarded-Proto {scheme}
 			header_up X-Forwarded-Host {host}
-			# Ensure Laravel generates correct absolute https:// URLs.
-			# Caddy serves HTTPS on 443 in this setup.
-			header_up X-Forwarded-Port 443
+			# Pass the external HTTPS port (defaults to 443, but may be different if port conflict)
+			header_up X-Forwarded-Port {$HTTPS_PORT:443}
 			header_up X-Real-IP {remote_host}
 		}
 	}
@@ -46,11 +57,12 @@
 
 	# API / Backend (Laravel)
 	handle {
-		reverse_proxy 127.0.0.1:{$APP_PORT} {
+		reverse_proxy {$APP_HOST:127.0.0.1}:{$APP_PORT} {
 			header_up Host {host}
 			header_up X-Forwarded-Proto {scheme}
 			header_up X-Forwarded-Host {host}
-			header_up X-Forwarded-Port 443
+			# Pass the external HTTPS port (defaults to 443, but may be different if port conflict)
+			header_up X-Forwarded-Port {$HTTPS_PORT:443}
 			header_up X-Real-IP {remote_host}
 		}
 	}
