feat: enhance Docker setup with .env file integration and update documentation
- Added support for a Docker-specific `.env` file to the Docker Compose configuration, allowing for separate environment settings for Docker and native installations.
- Updated installation documentation to clarify the usage of different `.env` files for Docker and native setups, ensuring both methods can coexist with distinct configurations.
- Modified startup scripts to create and manage the Docker `.env` file, improving the setup process for Docker users.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -59,6 +59,7 @@ services:
     volumes:
       - ../:/var/www/html
       - ./php.ini:/usr/local/etc/php/conf.d/custom.ini
+      - ./.env:/var/www/html/.env
     environment:
       APP_ENV: ${APP_ENV:-local}
       APP_DEBUG: ${APP_DEBUG:-true}
@@ -90,6 +91,8 @@ services:
       dockerfile: docker/Dockerfile.prod
     container_name: blb-app
     working_dir: /var/www/html
+    volumes:
+      - ./.env:/var/www/html/.env
     environment:
       APP_ENV: production
       APP_DEBUG: false
@@ -121,6 +124,7 @@ services:
     working_dir: /var/www/html
     volumes:
       - ../:/var/www/html
+      - ./.env:/var/www/html/.env
     environment:
       NODE_ENV: development
     ports:
@@ -137,6 +141,8 @@ services:
       dockerfile: docker/Dockerfile.prod
     container_name: blb-queue
     working_dir: /var/www/html
+    volumes:
+      - ./.env:/var/www/html/.env
     environment:
       APP_ENV: production
       APP_DEBUG: false
