--- a/package.json
+++ b/package.json
@@ -7,18 +7,19 @@
         "dev:all": "concurrently -c \"#93c5fd,#c4b5fd,#fb7185,#fdba74\" \"php artisan serve --port=${APP_PORT:-8000}\" \"php artisan queue:listen --tries=1\" \"php artisan pail --timeout=0\" \"bun run dev\" --names=server,queue,logs,vite --kill-others"
     },
     "dependencies": {
-        "@tailwindcss/vite": "^4.1.17",
-        "autoprefixer": "^10.4.22",
+        "@tailwindcss/vite": "^4.1.18",
+        "alpinejs": "^3.15.3",
+        "autoprefixer": "^10.4.23",
         "axios": "^1.13.2",
         "concurrently": "^9.2.1",
+        "daisyui": "^5.5.14",
         "laravel-vite-plugin": "^2.0.1",
-        "daisyui": "^5.5.5",
-        "tailwindcss": "^4.1.17",
-        "vite": "^7.2.6"
+        "tailwindcss": "^4.1.18",
+        "vite": "^7.3.0"
     },
     "optionalDependencies": {
-        "@rollup/rollup-linux-x64-gnu": "4.53.3",
-        "@tailwindcss/oxide-linux-x64-gnu": "^4.1.17",
+        "@rollup/rollup-linux-x64-gnu": "4.54.0",
+        "@tailwindcss/oxide-linux-x64-gnu": "^4.1.18",
         "lightningcss-linux-x64-gnu": "^1.30.2"
     }
 }
