chore: update dependencies and enhance project configuration
- Added `barryvdh/laravel-ide-helper` as a development dependency for improved IDE support.
- Updated `composer.lock` to reflect changes in package versions, including `monolog` to 3.10.0 and `symfony` components to 7.4.3.
- Modified `.gitignore` to include IDE helper files and a specific directory for documentation.
- Removed obsolete GitHub Actions workflow for checking system versions and streamlined the CI configuration.
- Adjusted layout components for better structure and consistency in the application views.

--- a/.gitignore
+++ b/.gitignore
@@ -20,6 +20,11 @@ Homestead.yaml
 .phpactor.json
 /.playwright-mcp
 
+# IDE Helper files (generated)
+_ide_helper.php
+_ide_helper_models.php
+.phpstorm.meta.php
+
 # Package manager logs
 npm-debug.log
 yarn-error.log
@@ -36,3 +41,4 @@ package-lock.json
 /.caddy
 /certs
 /auth.json
+/docs/zpad
