--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "robsontenorio/mary": "^2.5.0"
     },
     "require-dev": {
+        "barryvdh/laravel-ide-helper": "^3.6",
         "fakerphp/faker": "^1.24.1",
         "laravel/pail": "^1.2.4",
         "laravel/pint": "^1.26.0",
