Configure testing database settings in GitHub Actions workflow
- Added steps to configure the testing database to use SQLite with an in-memory database for faster test execution.
- Updated the environment file setup in the workflow to reflect these changes.

--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -39,6 +39,11 @@ jobs:
       - name: Copy Environment File
         run: cp .env.example .env
 
+      - name: Configure Database for Testing
+        run: |
+          echo "DB_CONNECTION=sqlite" >> .env
+          echo "DB_DATABASE=:memory:" >> .env
+
       - name: Generate Application Key
         run: php artisan key:generate
 
