Update .gitignore and remove AGENTS.md documentation
- Simplified .gitignore by adding a general rule to ignore the entire /storage directory.
- Deleted AGENTS.md file, which contained outdated database migration guidelines and conventions.

--- a/.gitignore
+++ b/.gitignore
@@ -4,9 +4,7 @@
 /public/build
 /public/hot
 /public/storage
-/storage/*.key
-/storage/pail
-/storage/app/ssl
+/storage
 Homestead.json
 Homestead.yaml
 
