--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
     "require": {
         "php": "^8.2",
         "laravel/framework": "^12.51.0",
+        "laravel/reverb": "^1.7",
         "laravel/tinker": "^2.11.2",
         "livewire/volt": "^1.10.2"
     },
