--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "dev:all": "concurrently -c \"#93c5fd,#c4b5fd,#fdba74\" \"php artisan serve --port=${APP_PORT:-8000}\" \"php artisan queue:listen --tries=1\" \"bun run dev\" --names=server,queue,vite --kill-others"
+        "dev:all": "concurrently -c \"#93c5fd,#c4b5fd,#86efac,#fdba74\" \"php artisan serve --port=${APP_PORT:-8000}\" \"php artisan queue:listen --tries=1\" \"php artisan reverb:start\" \"bun run dev\" --names=server,queue,reverb,vite --kill-others"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.18",
@@ -12,7 +12,9 @@
         "autoprefixer": "^10.4.23",
         "axios": "^1.13.2",
         "concurrently": "^9.2.1",
+        "laravel-echo": "^2.3.0",
         "laravel-vite-plugin": "^2.0.1",
+        "pusher-js": "^8.4.0",
         "tailwindcss": "^4.1.18",
         "vite": "^7.3.0"
     },
