feat: Introduce development seeders and enhance seeding process
- Added a base `DevSeeder` class to manage development-specific database seeding, ensuring it only runs in local environments.
- Updated existing development seeders for companies, departments, and employees to extend from `DevSeeder` and implement the new `seed()` method.
- Created a new `DevAdminUserSeeder` to seed an initial admin user based on environment variables, ensuring it only runs when the users table is empty.
- Enhanced documentation in `.env.example` to guide developers on setting up the initial admin user for local development.

--- a/.env.example
+++ b/.env.example
@@ -85,3 +85,10 @@ AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
 VITE_APP_NAME="${APP_NAME}"
+
+# Dev seed: initial admin user (DevAdminUserSeeder). Delete or leave unset in production.
+# Only used when users table is empty and seeder is run explicitly.
+# Quote values with spaces: DEV_ADMIN_NAME="Kiat Ng"
+# DEV_ADMIN_NAME=Administrator
+# DEV_ADMIN_EMAIL=admin@example.com
+# DEV_ADMIN_PASSWORD=password
