feat: Update application name and enhance error handling
- Updated the application name in `.env.example` and `config/app.php` to reflect the product name "Belimbing".
- Improved error handling in `public/index.php` to catch fatal errors before Laravel boots, providing a user-friendly error message instead of a generic 502 response.
- Refactored the `markActive` method in `MenuBuilder.php` to prioritize child route matches and ensure accurate active state marking for menu items.
- Added `RouteServiceProvider` to `bootstrap/providers.php` for better route management.

--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,4 @@
+# Application name. Shown in page titles, auth screens, and used for Redis/cache/session key prefixes when sharing infra. Change to your product name.
 APP_NAME=Belimbing
 # local — Development on your machine
 # staging — Pre-production testing
