chore: Update environment configuration and refactor authentication routes
- Changed the `BROADCAST_CONNECTION` in `.env.example` to `reverb` and added new Reverb configuration variables.
- Updated the `dev:all` script in `package.json` to remove the `php artisan reverb:start` command.
- Consolidated authentication routes into the `Modules/Core/User/Routes/web.php` file, removing the deprecated `auth.php` file.
- Enhanced the architecture migration documentation to reflect the completion of Phase 3 and the new directory structure.

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
     "scripts": {
         "build": "vite build",
         "dev": "vite",
-        "dev:all": "concurrently -c \"#93c5fd,#c4b5fd,#86efac,#fdba74\" \"php artisan serve --port=${APP_PORT:-8000}\" \"php artisan queue:listen --tries=1\" \"php artisan reverb:start\" \"bun run dev\" --names=server,queue,reverb,vite --kill-others"
+        "dev:all": "concurrently -c \"#93c5fd,#c4b5fd,#86efac,#fdba74\" \"php artisan serve --port=${APP_PORT:-8000}\" \"php artisan queue:listen --tries=1\" \"php artisan reverb:start\" \"bun run dev\" --names=server,queue,reverb,vite"
     },
     "dependencies": {
         "@tailwindcss/vite": "^4.1.18",
