--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -41,8 +41,10 @@ jobs:
 
       - name: Configure Database for Testing
         run: |
-          echo "DB_CONNECTION=sqlite" >> .env
-          echo "DB_DATABASE=:memory:" >> .env
+          sed -i 's/^DB_CONNECTION=.*/DB_CONNECTION=sqlite/' .env
+          sed -i 's/^DB_DATABASE=.*/DB_DATABASE=:memory:/' .env
+          sed -i 's/value="pgsql"/value="sqlite"/' phpunit.xml
+          sed -i 's/value="blb"/value=":memory:"/' phpunit.xml
 
       - name: Generate Application Key
         run: php artisan key:generate
