feat: Enhance development seeding process with new commands and dependencies

--- a/.env.example
+++ b/.env.example
@@ -98,6 +98,9 @@ VITE_REVERB_HOST="${REVERB_HOST}"
 VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
+# Dev seed: licensee company name (id=1). Used by dev:reseed when creating the licensee company.
+# DEV_LICENSEE_NAME=My Company
+
 # Dev seed: initial admin user (DevAdminUserSeeder). Delete or leave unset in production.
 # Only used when users table is empty and seeder is run explicitly.
 # Quote values with spaces: DEV_ADMIN_NAME="Kiat Ng"
