--- a/composer.json
+++ b/composer.json
@@ -13,20 +13,20 @@
     "license": "AGPL-3.0-only",
     "require": {
         "php": "^8.2",
-        "laravel/framework": "^12.51.0",
-        "laravel/reverb": "^1.7",
+        "laravel/framework": "^12.52.0",
+        "laravel/reverb": "^1.7.1",
         "laravel/tinker": "^2.11.2",
         "livewire/volt": "^1.10.2"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^3.6",
+        "barryvdh/laravel-ide-helper": "^3.6.1",
         "fakerphp/faker": "^1.24.1",
         "laravel/pail": "^1.2.6",
         "laravel/pint": "^1.27.1",
         "mockery/mockery": "^1.6.12",
-        "nunomaduro/collision": "^8.8.3",
-        "pestphp/pest": "^4.3.2",
-        "pestphp/pest-plugin-laravel": "^4.0.0"
+        "nunomaduro/collision": "^8.9.1",
+        "pestphp/pest": "^4.4.1",
+        "pestphp/pest-plugin-laravel": "^4.1.0"
     },
     "autoload": {
         "psr-4": {
@@ -67,7 +67,8 @@
         ],
         "test": [
             "@php artisan config:clear --ansi",
-            "@php artisan test"
+            "@php artisan test",
+            "@php artisan migrate:fresh --seed --dev --ansi"
         ],
         "lint": [
             "@php artisan pint"
