refactor: Update authorization and employee management structure
- Removed the DevAdminUserSeeder and adjusted the DevUserSeeder to link users with employees via employee_id.
- Updated the Employee model to reflect the new relationship with User, replacing user_id with employee_id.
- Enhanced the DevEmployeeSeeder to seed a licensee employee and digital workers.
- Added new permissions for system management features including logs, migrations, and scheduled tasks.
- Updated .env.example with new configuration options for logging and bcrypt settings.
- Refined the migration and seeder processes to improve clarity and functionality.

--- a/.env.example
+++ b/.env.example
@@ -34,13 +34,19 @@ APP_FAKER_LOCALE=en_US
 APP_MAINTENANCE_DRIVER=file
 # APP_MAINTENANCE_STORE=database
 
+# Built-in PHP server: number of worker processes (for `php artisan serve`)
 PHP_CLI_SERVER_WORKERS=4
 
+# Bcrypt cost factor for password hashing (higher = slower, more secure; 12 is a good default)
 BCRYPT_ROUNDS=12
 
+# Logging: stack uses channels defined in config/logging.php
 LOG_CHANNEL=stack
+# Stack driver: single (one file), daily, stderr, etc.
 LOG_STACK=single
+# Deprecation notices: null to ignore, or a channel name
 LOG_DEPRECATIONS_CHANNEL=null
+# Log level: debug, info, notice, warning, error, critical, alert, emergency
 LOG_LEVEL=debug
 
 DB_CONNECTION=pgsql
@@ -79,12 +85,6 @@ MAIL_PASSWORD=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
-AWS_ACCESS_KEY_ID=
-AWS_SECRET_ACCESS_KEY=
-AWS_DEFAULT_REGION=us-east-1
-AWS_BUCKET=
-AWS_USE_PATH_STYLE_ENDPOINT=false
-
 REVERB_APP_ID=belimbing-local
 REVERB_APP_KEY=belimbing-key
 REVERB_APP_SECRET=belimbing-secret
@@ -99,11 +99,9 @@ VITE_REVERB_PORT="${REVERB_PORT}"
 VITE_REVERB_SCHEME="${REVERB_SCHEME}"
 
 # Dev seed: licensee company name (id=1). Used by dev:reseed when creating the licensee company.
-# DEV_LICENSEE_NAME=My Company
+# DEV_LICENSEE_COMPANY_NAME=My Company
 
-# Dev seed: initial admin user (DevAdminUserSeeder). Delete or leave unset in production.
-# Only used when users table is empty and seeder is run explicitly.
-# Quote values with spaces: DEV_ADMIN_NAME="Kiat Ng"
-# DEV_ADMIN_NAME=Administrator
+# Dev seed: initial admin user (DevUserSeeder). Delete or leave unset in production.
+# DEV_ADMIN_NAME="Blb Admin"
 # DEV_ADMIN_EMAIL=admin@example.com
 # DEV_ADMIN_PASSWORD=password
